--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@vue/cli-service": "^5.0.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.0.0",
     "cors": "^2.8.5",
